--- a/src/devtools/panel.html
+++ b/src/devtools/panel.html
@@ -43,9 +43,9 @@
       <button id="send" class="ui positive button">发送</button>
     </div>
     <div class="progress-field">
-      <div class="ui indicating progress">
+      <div id="progress" class="ui indicating progress">
         <div class="bar"></div>
-        <div class="label">等待发送</div>
+        <div id="progressLabel" class="label">等待发送</div>
       </div>
     </div>
   </body>
