--- a/src/devtools/panel.html
+++ b/src/devtools/panel.html
@@ -19,9 +19,6 @@
       .field {
         margin-top: 22px;
       }
-      .progress-field {
-        margin-top: 52px;
-      }
     </style>
   </head>
   <body>
@@ -42,10 +39,16 @@
     <div class="field">
       <button id="send" class="ui positive button">发送</button>
     </div>
-    <div class="progress-field">
-      <div id="progress" class="ui indicating progress">
-        <div class="bar"></div>
-        <div id="progressLabel" class="label">等待发送</div>
+    <div id="modal" class="ui modal">
+      <i class="close icon"></i>
+      <div class="header">
+        正在发送...发送过程不要关闭此页面
+      </div>
+      <div class="content">
+        <div id="progress" class="ui indicating progress">
+          <div class="bar"></div>
+          <div id="progressLabel" class="label">等待发送</div>
+        </div>
       </div>
     </div>
   </body>
