--- a/src/devtools/panel.html
+++ b/src/devtools/panel.html
@@ -42,7 +42,7 @@
     <div id="modal" class="ui modal">
       <i class="close icon"></i>
       <div class="header">
-        正在发送...发送过程不要关闭此页面
+        发送过程不要关闭此页面<br />发送失败是指 48 小时内未联系过的失败
       </div>
       <div class="content">
         <div id="progress" class="ui indicating progress">
