--- a/src/devtools/panel.html
+++ b/src/devtools/panel.html
@@ -25,7 +25,11 @@
     <h3 id="tips" class="ui header">正在获取登录信息...</h3>
     <div id="log"></div>
     <div class="field">
-      <label>发送用户组（<strong id="userGroupsCount">0</strong>）</label>
+      <label
+        >发送用户组（<strong id="userGroupsCount">
+          <div class="ui active inline loader tiny"></div> </strong
+        >）</label
+      >
       <select id="userGroups" class="ui fluid search dropdown" multiple="">
         <option value="">选择用户组（可多选, 重复用户会排重）</option>
       </select>
