--- a/src/devtools/panel.html
+++ b/src/devtools/panel.html
@@ -44,6 +44,7 @@
       <div class="header">
         1.发送过程不要关闭此页面
         <br />2.发送失败是指发送给了 48小时内未联系过的用户
+        <br />3.如果发送用户组中含有重复用户，则重复部分也会算到发送失败里面去
       </div>
       <div class="content">
         <div id="progress" class="ui indicating progress">
