--- a/src/devtools/panel.html
+++ b/src/devtools/panel.html
@@ -42,9 +42,10 @@
     <div id="modal" class="ui modal">
       <i class="close icon"></i>
       <div class="header">
-        1.发送过程不要关闭此页面
-        <br />2.发送失败是指发送给了 48小时内未联系过的用户
-        <br />3.如果发送用户组中含有重复用户，则重复部分也会算到发送失败里面去
+        1.发送过程尽量不要关闭此页面，否则看不到进度（任务会继续，除非刷新页面）
+        <br />2.发送过程中如果用户组人员发生变化，则发送对象也会相应发生变化
+        <br />3.发送失败是指发送给了 48小时内未联系过的用户
+        <br />4.如果发送用户组中含有重复用户，则重复部分也会算到发送失败里面去
       </div>
       <div class="content">
         <div id="progress" class="ui indicating progress">
